# vinegar

./: .gitignore  Cargo.toml  Cargo_old.toml  README.md  example copy.vgr  example.vgr
rust_struct_wrapper_macro/: Cargo.toml
rust_struct_wrapper_macro/src/: lib.rs
src/: debug.rs  file_handler.rs  lib.rs  main.rs
src/interpreter/: debug.rs  error_handling.rs  interpreter.rs  iter.rs  lexer.rs  mod.rs  parser.rs  runtime.rs  string_literal_map.rs  vinegar_rust_conversions.rs  vinegar_std.rs
tests/: interpreter_test.rs  lexer_tests.rs  parser_tests.rs
working files/: example.vgr  temp.txt  token_example.vgr
working_files/: temp.txt  test.vgr
working_files/idiot_stuff/: Cargo.toml
working_files/idiot_stuff/src/: main.rs
