[package]
name = "vinegar"
version = "0.1.0"
edition = "2021"

[dependencies]
thiserror = "1"
lazy_static = "1"
unescaper = "0.1"
regex = "1.9"
colored = "2"

rust_struct_wrapper_macro = { path = "rust_struct_wrapper_macro" }


[lib]
name = "vinegar"
path = "src/lib.rs"

[[bin]]
name = "vinegar"
path = "src/main.rs"